fix of the BIG update

--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Hîrbu Andrei — Web Proffesional Freelancer"
+    />
+    <meta
+      name="keywords"
+      content="HTML,CSS,JavaScript,PHP,Wordpress,Freelancer"
+    />
+    <title>Hîrbu Andrei</title>
     <link rel="stylesheet" href="dist/style.css" />
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
   </head>
