--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <title>Hîrbu Andrei</title>
     <link rel="stylesheet" href="dist/style.css" />
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.png" />
   </head>
   <body>
     <header class="header">
