--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <article class="work__element">
             <div
               class="work__element-background"
-              style="background-image: url('/public/sites/aviagro.jpg'); transition: 5s;"
+              style="background-image: url('/public/sites/shop.jpg'); transition: 5s;"
             ></div>
             <div class="work__element-text">
               <h5 class="work__element-title">
