--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
           </article>
           <article class="work__element">
             <div
-              class="work__element-background"
+              class="work__element-background work__element-background-no"
               style="background-image: url('/public/sites/todoblist.jpg');"
             ></div>
             <div class="work__element-text">
