--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
     <footer class="footer">
       <p>
         &copy; <span class="footer__year">2020</span> Created with lots of ❤️
-        and some ☕ by <span id="me">this guy</span>.
+        and some ☕ by this guy.
       </p>
     </footer>
     <script src="dist/script.js"></script>
