--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       name="keywords"
       content="HTML,CSS,JavaScript,PHP,Wordpress,Freelancer"
     />
+    <meta name="og:image" content="/public/meta.png" />
     <title>Hîrbu Andrei</title>
     <link rel="stylesheet" href="dist/style.css" />
     <link rel="shortcut icon" href="public/favicon.png" />
