duck ff and safari

--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
           Home
         </span>
         <div class="home__main">
+          <div class="home__main__title-wrapper">
           <h1 class="home__main__title">
             <a href="#"
               ><span>&gt;</span> Hîrbu Andrei
               <span class="blink">&vert;</span></a
             >
           </h1>
+        </div>
           <h3 class="home__main__subtitle">
             web proffesional <span class="line">—</span
             ><span class="br"><br /></span> freelancer
@@ -137,8 +139,10 @@
         <div class="work__list" id="work__list">
           <article class="work__element">
             <div
-              class="work__element-background"
-              style="background-image: url('/public/sites/casacreanga.jpg'); transition: 3s;"
+              data-url="/public/sites/casacreanga.jpg"
+              data-speed="7s";
+              class="work__element-background work__element-background-s"
+              style="background-image: url('/public/sites/casacreanga-s.jpg');"
             ></div>
             <div class="work__element-text">
               <h5 class="work__element-title">
@@ -165,8 +169,10 @@
           </article>
           <article class="work__element">
             <div
-              class="work__element-background"
-              style="background-image: url('/public/sites/shop.jpg'); transition: 5s;"
+              data-url="/public/sites/shop.jpg"
+              data-speed="7s";
+              class="work__element-background work__element-background-s"
+              style="background-image: url('/public/sites/shop-s.jpg');"
             ></div>
             <div class="work__element-text">
               <h5 class="work__element-title">
@@ -194,8 +200,10 @@
           </article>
           <article class="work__element">
             <div
-              class="work__element-background"
-              style="background-image: url('/public/sites/stinfo.jpg'); transition: 1s;"
+              data-url="/public/sites/stinfo.jpg"
+              data-speed="2s";
+              class="work__element-background work__element-background-s"
+              style="background-image: url('/public/sites/stinfo-s.jpg');"
             ></div>
             <div class="work__element-text">
               <h5 class="work__element-title">
@@ -223,8 +231,10 @@
           </article>
           <article class="work__element">
             <div
-              class="work__element-background"
-              style="background-image: url('/public/sites/exporeit.jpg'); transition: 4s;"
+              data-url="/public/sites/exporeit.jpg"
+              data-speed="8s";
+              class="work__element-background work__element-background-s"
+              style="background-image: url('/public/sites/exporeit-s.jpg');"
             ></div>
             <div class="work__element-text">
               <h5 class="work__element-title">
@@ -292,8 +302,10 @@
           </article>
           <article class="work__element">
             <div
-              class="work__element-background"
-              style="background-image: url('/public/sites/flashscore-api.jpg'); transition: 1s;"
+              data-url="/public/sites/flashscore-api.jpg"
+              data-speed="2s";
+              class="work__element-background work__element-background-s"
+              style="background-image: url('/public/sites/flashscore-api-s.jpg');"
             ></div>
             <div class="work__element-text">
               <h5 class="work__element-title">
