--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         </span>
         <div class="home__main">
           <div class="home__main__title-wrapper">
-          <h1 class="home__main__title">
-            <a href="#"
-              ><span>&gt;</span> Hîrbu Andrei
-              <span class="blink">&vert;</span></a
-            >
-          </h1>
-        </div>
+            <h1 class="home__main__title">
+              <a href="#"
+                ><span>&gt;</span> Hîrbu Andrei
+                <span class="blink">&vert;</span></a
+              >
+            </h1>
+          </div>
           <h3 class="home__main__subtitle">
             web proffesional <span class="line">—</span
             ><span class="br"><br /></span> freelancer
@@ -140,7 +140,7 @@
           <article class="work__element">
             <div
               data-url="/public/sites/casacreanga.jpg"
-              data-speed="7s";
+              data-speed="7s"
               class="work__element-background work__element-background-s"
               style="background-image: url('/public/sites/casacreanga-s.jpg');"
             ></div>
@@ -170,7 +170,7 @@
           <article class="work__element">
             <div
               data-url="/public/sites/shop.jpg"
-              data-speed="7s";
+              data-speed="7s"
               class="work__element-background work__element-background-s"
               style="background-image: url('/public/sites/shop-s.jpg');"
             ></div>
@@ -201,7 +201,7 @@
           <article class="work__element">
             <div
               data-url="/public/sites/stinfo.jpg"
-              data-speed="2s";
+              data-speed="2s"
               class="work__element-background work__element-background-s"
               style="background-image: url('/public/sites/stinfo-s.jpg');"
             ></div>
@@ -232,7 +232,7 @@
           <article class="work__element">
             <div
               data-url="/public/sites/exporeit.jpg"
-              data-speed="8s";
+              data-speed="8s"
               class="work__element-background work__element-background-s"
               style="background-image: url('/public/sites/exporeit-s.jpg');"
             ></div>
@@ -260,6 +260,43 @@
             </div>
             <a
               href="https://github.com/andrei-hrb/EuroscolaRO2018"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="work__element-github"
+            ></a>
+          </article>
+          <article class="work__element">
+            <div
+              data-url="/public/sites/payouts.jpg"
+              data-speed="3s"
+              class="work__element-background work__element-background-s"
+              style="background-image: url('/public/sites/payouts-s.jpg');"
+            ></div>
+            <div class="work__element-text">
+              <h5 class="work__element-title">
+                Transfer of currency type app
+              </h5>
+              <h6 class="work__element-subtitle">
+                <a
+                  href="http://payouts.andrei-hrb.com/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  title="* it might take 10 seconds to load because of the hosting's limitations of the free plan"
+                >
+                  Payouts *
+                </a>
+              </h6>
+              <hr />
+              <ul class="work__element-technologies">
+                <li class="work__element-technologies-html"></li>
+                <li class="work__element-technologies-css"></li>
+                <li class="work__element-technologies-javascript"></li>
+                <li class="work__element-technologies-php"></li>
+                <li class="work__element-technologies-laravel"></li>
+              </ul>
+            </div>
+            <a
+              href="https://github.com/andrei-hrb/payouts"
               target="_blank"
               rel="noopener noreferrer"
               class="work__element-github"
@@ -303,7 +340,8 @@
           <article class="work__element">
             <div
               data-url="/public/sites/flashscore-api.jpg"
-              data-speed="2s";
+              data-speed="2s"
+              ;
               class="work__element-background work__element-background-s"
               style="background-image: url('/public/sites/flashscore-api-s.jpg');"
             ></div>
