possible fix for snell font on linux and some file management

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       name="keywords"
       content="HTML,CSS,JavaScript,PHP,Wordpress,Freelancer"
     />
-    <meta name="og:image" content="/public/meta.png" />
+    <meta name="og:image" content="/public/images/meta.png" />
     <title>Hîrbu Andrei</title>
-    <link rel="stylesheet" href="dist/style.css" />
-    <link rel="shortcut icon" href="public/favicon.png" />
+    <link rel="stylesheet" href="/dist/style.css" />
+    <link rel="shortcut icon" href="/public/images/favicon.png" />
   </head>
   <body>
     <header class="header">
@@ -408,6 +408,6 @@
         and some ☕ by this guy.
       </p>
     </footer>
-    <script src="dist/script.js"></script>
+    <script src="/dist/script.js"></script>
   </body>
 </html>
