update for some projects on fiverr

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <section
         class="work"
         id="work"
-        style="height: calc(7 * var(--a-size) + 5rem)"
+        style="height: calc(9 * var(--a-size) + 5rem)"
       >
         <span class="background-text">
           Work
@@ -197,6 +197,43 @@
                 <li class="work__element-technologies-woocommerce"></li>
               </ul>
             </div>
+          </article>
+          <article class="work__element">
+            <div
+              data-url="/public/sites/real-estate.jpg"
+              data-speed="2s"
+              class="work__element-background work__element-background-s"
+              style="background-image: url('/public/sites/real-estate-s.jpg');"
+            ></div>
+            <div class="work__element-text">
+              <h5 class="work__element-title">
+                Propreties managment and proting website for a Real Estate Agency
+              </h5>
+              <h6 class="work__element-subtitle">
+                <a
+                  href="https://septimiuestate.ro/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  Septimiu Estate
+                </a>
+              </h6>
+              <hr />
+              <ul class="work__element-technologies">
+                <li class="work__element-technologies-html"></li>
+                <li class="work__element-technologies-css"></li>
+                <li class="work__element-technologies-javascript"></li>
+                <li class="work__element-technologies-php"></li>
+                <li class="work__element-technologies-wordpress"></li>
+                <li class="work__element-technologies-elementor"></li>
+              </ul>
+            </div>
+            <a
+              href="https://www.fiverr.com/andreihirbu/build-you-an-amazing-wordpress-website"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="work__element-fiverr"
+          ></a>
           </article>
           <article class="work__element">
             <div
@@ -339,15 +376,40 @@
           </article>
           <article class="work__element">
             <div
+              class="work__element-background work__element-background-no-left"
+              style="background-image: url('/public/sites/booking-checker.jpg');"
+            ></div>
+            <div class="work__element-text">
+              <h5 class="work__element-title">
+                Booking.com scrapper that emails you every morning wheter or not a proprerty is available
+              </h5>
+              <h6 class="work__element-subtitle work__element-subtitle">
+                  Booking.com Checker
+              </h6>
+              <hr />
+              <ul class="work__element-technologies">
+                <li class="work__element-technologies-puppeteer"></li>
+                <li class="work__element-technologies-nodejs"></li>
+                <li class="work__element-technologies-expressjs"></li>
+              </ul>
+            </div>
+            <a
+              href="https://github.com/andrei-hrb/booking-checker"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="work__element-github"
+            ></a>
+          </article>
+          <article class="work__element">
+            <div
               data-url="/public/sites/flashscore-api.jpg"
               data-speed="2s"
-              ;
               class="work__element-background work__element-background-s"
               style="background-image: url('/public/sites/flashscore-api-s.jpg');"
             ></div>
             <div class="work__element-text">
               <h5 class="work__element-title">
-                Documented API based on Puppeteer web scrapper
+                Documented API using a web scrapper
               </h5>
               <h6 class="work__element-subtitle">
                 <a
@@ -361,6 +423,7 @@
               </h6>
               <hr />
               <ul class="work__element-technologies">
+                <li class="work__element-technologies-puppeteer"></li>
                 <li class="work__element-technologies-typescript"></li>
                 <li class="work__element-technologies-nodejs"></li>
                 <li class="work__element-technologies-expressjs"></li>
