--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
             ></div>
             <div class="work__element-text">
               <h5 class="work__element-title">
-                Propreties managment and proting website for a Real Estate Agency
+                Propreties managment and promoting website for a Real Estate
+                Agency
               </h5>
               <h6 class="work__element-subtitle">
                 <a
@@ -233,7 +234,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="work__element-fiverr"
-          ></a>
+            ></a>
           </article>
           <article class="work__element">
             <div
@@ -381,10 +382,11 @@
             ></div>
             <div class="work__element-text">
               <h5 class="work__element-title">
-                Booking.com scrapper that emails you every morning wheter or not a proprerty is available
+                Booking.com scrapper that emails you every morning wheter or not
+                a proprerty is available
               </h5>
               <h6 class="work__element-subtitle work__element-subtitle">
-                  Booking.com Checker
+                Booking.com Checker
               </h6>
               <hr />
               <ul class="work__element-technologies">
