--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               </li>
               <li class="about__terminal__main-result">
                 ["HTML", "Sass", "JavaScript", "PHP", "Wordpress", "Woocomerce",
-                "Laravel", "git"]
+                "Elementor", "ACF" "Laravel", "NodeJS", "git"]
               </li>
               <li><br /></li>
               <li class="about__terminal__main-command">
@@ -391,6 +391,7 @@
               <hr />
               <ul class="work__element-technologies">
                 <li class="work__element-technologies-puppeteer"></li>
+                <li class="work__element-technologies-javascript"></li>
                 <li class="work__element-technologies-nodejs"></li>
                 <li class="work__element-technologies-expressjs"></li>
               </ul>
