simplified build process and added new project; check it out

--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
     </header>
     <main>
       <section class="home" id="home">
-        <span class="background-text">
-          Home
-        </span>
+        <span class="background-text"> Home </span>
         <div class="home__main">
           <div class="home__main__title-wrapper">
             <h1 class="home__main__title">
@@ -55,9 +53,7 @@
         </div>
       </section>
       <section class="about" id="about">
-        <div class="background-text">
-          About
-        </div>
+        <div class="background-text">About</div>
         <div class="about__terminal">
           <div class="about__terminal__top">
             <span class="about__terminal__top-dot red"></span>
@@ -69,9 +65,7 @@
           </div>
           <div class="about__terminal__main">
             <ul class="about__terminal__main-commands">
-              <li class="about__terminal__main-command">
-                $andrei->fullName
-              </li>
+              <li class="about__terminal__main-command">$andrei->fullName</li>
               <li class="about__terminal__main-result">Hîrbu Andrei</li>
               <li><br /></li>
               <li class="about__terminal__main-command">
@@ -106,16 +100,12 @@
                 >"]
               </li>
               <li><br /></li>
-              <li class="about__terminal__main-command">
-                $andrei->interests
-              </li>
+              <li class="about__terminal__main-command">$andrei->interests</li>
               <li class="about__terminal__main-result">
                 ["robotics", "podcasts", "hip-hop", "soccer", "cars"]
               </li>
               <li><br /></li>
-              <li class="about__terminal__main-command">
-                $andrei->skills
-              </li>
+              <li class="about__terminal__main-command">$andrei->skills</li>
               <li class="about__terminal__main-result">
                 ["HTML", "Sass", "JavaScript", "PHP", "Wordpress", "Woocomerce",
                 "Elementor", "ACF" "Laravel", "NodeJS", "git"]
@@ -131,18 +121,16 @@
       <section
         class="work"
         id="work"
-        style="height: calc(9 * var(--a-size) + 5rem)"
+        style="height: calc(10 * var(--a-size) + 5rem)"
       >
-        <span class="background-text">
-          Work
-        </span>
+        <span class="background-text"> Work </span>
         <div class="work__list" id="work__list">
           <article class="work__element">
             <div
               data-url="/public/sites/casacreanga.jpg"
               data-speed="7s"
               class="work__element-background work__element-background-s"
-              style="background-image: url('/public/sites/casacreanga-s.jpg');"
+              style="background-image: url('/public/sites/casacreanga-s.jpg')"
             ></div>
             <div class="work__element-text">
               <h5 class="work__element-title">
@@ -172,7 +160,7 @@
               data-url="/public/sites/shop.jpg"
               data-speed="7s"
               class="work__element-background work__element-background-s"
-              style="background-image: url('/public/sites/shop-s.jpg');"
+              style="background-image: url('/public/sites/shop-s.jpg')"
             ></div>
             <div class="work__element-text">
               <h5 class="work__element-title">
@@ -203,7 +191,7 @@
               data-url="/public/sites/real-estate.jpg"
               data-speed="2s"
               class="work__element-background work__element-background-s"
-              style="background-image: url('/public/sites/real-estate-s.jpg');"
+              style="background-image: url('/public/sites/real-estate-s.jpg')"
             ></div>
             <div class="work__element-text">
               <h5 class="work__element-title">
@@ -238,10 +226,49 @@
           </article>
           <article class="work__element">
             <div
+              class="work__element-background work__element-background-no"
+              style="
+                background-image: url('/public/sites/better-infofer.png');
+                background-size: contain;
+              "
+            ></div>
+            <div class="work__element-text">
+              <h5 class="work__element-title">
+                Serverless React app for CFR's train schedule
+              </h5>
+              <h6 class="work__element-subtitle">
+                <a
+                  href="https://infofer.andrei-hrb.com/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  better infofer
+                </a>
+              </h6>
+              <hr />
+              <ul class="work__element-technologies">
+                <li class="work__element-technologies-html"></li>
+                <li class="work__element-technologies-css"></li>
+                <li class="work__element-technologies-javascript"></li>
+                <li class="work__element-technologies-react"></li>
+                <li class="work__element-technologies-serverless"></li>
+                <li class="work__element-technologies-puppeteer"></li>
+                <li class="work__element-technologies-nodejs"></li>
+              </ul>
+            </div>
+            <a
+              href="https://github.com/andrei-hrb/better-infofer"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="work__element-github"
+            ></a>
+          </article>
+          <article class="work__element">
+            <div
               data-url="/public/sites/stinfo.jpg"
               data-speed="2s"
               class="work__element-background work__element-background-s"
-              style="background-image: url('/public/sites/stinfo-s.jpg');"
+              style="background-image: url('/public/sites/stinfo-s.jpg')"
             ></div>
             <div class="work__element-text">
               <h5 class="work__element-title">
@@ -272,7 +299,7 @@
               data-url="/public/sites/exporeit.jpg"
               data-speed="8s"
               class="work__element-background work__element-background-s"
-              style="background-image: url('/public/sites/exporeit-s.jpg');"
+              style="background-image: url('/public/sites/exporeit-s.jpg')"
             ></div>
             <div class="work__element-text">
               <h5 class="work__element-title">
@@ -308,12 +335,10 @@
               data-url="/public/sites/payouts.jpg"
               data-speed="3s"
               class="work__element-background work__element-background-s"
-              style="background-image: url('/public/sites/payouts-s.jpg');"
+              style="background-image: url('/public/sites/payouts-s.jpg')"
             ></div>
             <div class="work__element-text">
-              <h5 class="work__element-title">
-                Transfer of currency type app
-              </h5>
+              <h5 class="work__element-title">Transfer of currency type app</h5>
               <h6 class="work__element-subtitle">
                 <a
                   href="http://payouts.andrei-hrb.com/"
@@ -343,7 +368,7 @@
           <article class="work__element">
             <div
               class="work__element-background work__element-background-no"
-              style="background-image: url('/public/sites/todoblist.jpg');"
+              style="background-image: url('/public/sites/todoblist.jpg')"
             ></div>
             <div class="work__element-text">
               <h5 class="work__element-title">
@@ -378,7 +403,7 @@
           <article class="work__element">
             <div
               class="work__element-background work__element-background-no-left"
-              style="background-image: url('/public/sites/booking-checker.jpg');"
+              style="background-image: url('/public/sites/booking-checker.jpg')"
             ></div>
             <div class="work__element-text">
               <h5 class="work__element-title">
@@ -408,7 +433,9 @@
               data-url="/public/sites/flashscore-api.jpg"
               data-speed="2s"
               class="work__element-background work__element-background-s"
-              style="background-image: url('/public/sites/flashscore-api-s.jpg');"
+              style="
+                background-image: url('/public/sites/flashscore-api-s.jpg');
+              "
             ></div>
             <div class="work__element-text">
               <h5 class="work__element-title">
@@ -442,9 +469,7 @@
         </div>
       </section>
       <section class="contact" id="contact">
-        <span class="background-text">
-          Contact
-        </span>
+        <span class="background-text"> Contact </span>
         <div class="contact__form">
           <form netlify name="contact">
             <p>
@@ -474,6 +499,42 @@
         and some ☕ by this guy.
       </p>
     </footer>
-    <script src="/dist/script.js"></script>
+    <script>
+      /**
+       * Show the Home button in nav
+       */
+      const observer = new IntersectionObserver(
+        function (entries) {
+          if (entries[0].isIntersecting === false)
+            document.querySelector(".top").classList.add("visible");
+          else document.querySelector(".top").classList.remove("visible");
+        },
+        { threshold: [1] }
+      );
+
+      observer.observe(document.querySelector(".home__main__title"));
+
+      /**
+       * Replace the work-elements-s backgrounds' with full
+       * sized images after loading.
+       */
+      window.addEventListener("load", () => {
+        const workElementsBackgrounds = document.querySelectorAll(
+          ".work__element-background-s"
+        );
+        workElementsBackgrounds.forEach((workElementBackground) => {
+          const image = new Image();
+          image.src = workElementBackground.dataset.url;
+          image.onload = () => {
+            workElementBackground.style.backgroundImage =
+              "url(" + image.src + ")";
+            setTimeout(() => {
+              workElementBackground.style.transition =
+                workElementBackground.dataset.speed;
+            }, 500);
+          };
+        });
+      });
+    </script>
   </body>
 </html>
