--- a/index.html
+++ b/index.html
@@ -107,8 +107,9 @@
               <li><br /></li>
               <li class="about__terminal__main-command">$andrei->skills</li>
               <li class="about__terminal__main-result">
-                ["HTML", "Sass", "JavaScript", "PHP", "Wordpress", "Woocomerce",
-                "Elementor", "ACF" "Laravel", "NodeJS", "git"]
+                ["HTML", "Sass", "JavaScript", "React", "Serverless", "PHP",
+                "Wordpress", "Woocomerce", "Elementor", "ACF" "Laravel",
+                "NodeJS", "git"]
               </li>
               <li><br /></li>
               <li class="about__terminal__main-command">
