--- a/lemonade-makes-you-sad.html
+++ b/lemonade-makes-you-sad.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://unpkg.com/sakura.css/css/sakura.css" type="text/css">
 </head>
 <body>
-  <h1>lemonade makes you sad/h1>
+  <h1>lemonade makes you sad</h1>
     <h3>it just does. trust me</h3>
  </body>
 </html>
