--- a/lemonade-makes-you-sad.html
+++ b/lemonade-makes-you-sad.html
@@ -10,6 +10,7 @@
 <body>
   <h1>lemonade makes you sad</h1>
     <h3>it just does. trust me</h3>
+    <img src="istockphoto-934714316-170667a.jpg">
     <img src="lemonade-2.jpg">
  </body>
 </html>
