--- a/lemonade-makes-you-sad.html
+++ b/lemonade-makes-you-sad.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lemode - Hîrbu Andrei</title>
+  <title>Lemonade - Hîrbu Andrei</title>
   <link rel="stylesheet" href="https://unpkg.com/normalize.css/normalize.css" type="text/css">
   <link rel="stylesheet" href="https://unpkg.com/sakura.css/css/sakura.css" type="text/css">
 </head>
